# mKTL

./: README.md  pyproject.toml
doc/: 00_mktl.md  01_mktl_architecture.md  legacy_arch.txt  mktl  protocol.rst  tldr.md
docs/: api  api.rst  conf.py  index.rst  overview.rst
examples/: daemon1.py  daemon2.py  mktl_daemon_playground.py
mktl/: __init__.py  get.py  mktlcoms.py  registry.py
mktl/backend/: ktl.py
mktl/client/: __init__.py  item.py  store.py
mktl/config/: __init__.py  cache.py  file.py  hash.py  items.py  provenance.py
mktl/daemon/: __init__.py  item.py  persist.py  poll.py  port.py  store.py
mktl/protocol/: __init__.py  discover.py  publish.py  request.py
mktl/proxy/: ktl.py  subprocess.py
python/testing/: potpied  profile.print  testbulk  testbulkloop  testbulkpub  testbulkpubloop  testconfig  testpub  testreq  testreqloop
sbin/: markguided
tests/: pyre_test.py  test-daemon.py
